buildscript {
    ext {
        kotlin_version = '1.3.31'
    }

    repositories {
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://plugins.gradle.org/m2/" }
        jcenter()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "net.onedaybeard.artemis:artemis-odb-gradle-plugin:2.2.0"
        classpath "net.onedaybeard.artemis:artemis-fluid-gradle-plugin:2.2.0"
        classpath "de.undercouch:gradle-download-task:3.4.3"
        classpath "gradle.plugin.com.github.breadmoirai:github-release:2.2.9"
        classpath "org.beryx:badass-jlink-plugin:2.11.2"
    }
}

allprojects {
    apply plugin: "idea"

    group = 'ao-java'
    version = '0.1.10'

    ext {
        appName = 'ao-java'
        gdxVersion = '1.9.10-SNAPSHOT'
        kryonetVersion = '2.22.0-RC1'
        roboVMVersion = '2.3.1'
        box2DLightsVersion = '1.4'
        aiVersion = '1.8.1'
        artemisVersion = '2.2.0'
        artemisContribVersion = '2.2.0'
        gdxAIVersion = '1.8.1'
    }

    repositories {
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
    }
}

subprojects {
    apply plugin: "java"

    sourceCompatibility = JavaVersion.VERSION_12
    targetCompatibility = JavaVersion.VERSION_12
	
	tasks.withType(JavaCompile) {
		options.encoding = "UTF-8"
		//options.compilerArgs << '-Xlint:unchecked'
		//options.deprecation = true
	}
}
